Adds contact page. Updates about.

--- a/series.html
+++ b/series.html
@@ -3,7 +3,7 @@ layout: minimal
 title: "Series"
 permalink: /series/index.html
 image: '/assets/img/series.png'
-description: "Take a look at my series..."
+description: "Take a look at our series"
 ---
 
 <h2>Series</h2>
