--- a/contact.html
+++ b/contact.html
@@ -23,6 +23,9 @@ description: "Send us an email"
         <label for="_replyto">Email</label>
         <input type="email" name="_replyto">
 
+        <label for="_message">Message</label>
+        <textarea name="_message"></textarea>
+
         <input type="submit" value="Send">
     </form>
 </div>
